fix: 한글화 작업 후 modal css 수정 ( 넓이, 정렬 )

--- a/webapp/channels/src/sass/components/_channel-invite-modal.scss
+++ b/webapp/channels/src/sass/components/_channel-invite-modal.scss
@@ -161,8 +161,9 @@
     }
 
     .custom-no-options-message {
-        padding: 12px 15px;
-        font-size: 16px;
+        text-align: center;
+        padding: 6px 15px;
+        font-size: 14px;
         line-height: 24px;
 
         button {
