--- a/webapp/channels/src/sass/layout/_sidebar-left.scss
+++ b/webapp/channels/src/sass/layout/_sidebar-left.scss
@@ -325,7 +325,7 @@ $sidebarOpacityAnimationDuration: 0.15s;
         height: 30px;
 
         .dropdown-menu {
-            min-width: 250px;
+            min-width: 180px;
             margin-top: 0;
             line-height: 19px;
 
@@ -577,7 +577,7 @@ $sidebarOpacityAnimationDuration: 0.15s;
 
     .SidebarCategory_newLabel {
         display: flex;
-        width: 32px;
+        //width: 32px;
         height: 16px;
         align-items: center;
         padding: 0 4px;
