--- a/webapp/channels/src/components/search_results/files_filter_menu.scss
+++ b/webapp/channels/src/components/search_results/files_filter_menu.scss
@@ -43,4 +43,12 @@
             color: var(--button-bg);
         }
     }
+
+    // 2023-05-12
+    // 모든 파일 구분 separator 추가
+    .MuiDivider-root {
+        margin: 0 14px 4px 14px;
+        padding-top: 2px;
+        border-color: #cccccc;
+    }
 }
