feat: 최신 공지사항 상단 고정 기능 추가

--- a/webapp/channels/src/sass/components/_module.scss
+++ b/webapp/channels/src/sass/components/_module.scss
@@ -7,6 +7,7 @@
 @import 'channel-header__icon';
 @import 'channel-invite-modal';
 @import 'channel-switcher';
+@import 'channel_top_fix_notice_ils';
 @import 'dropdown';
 @import 'emoticons';
 @import 'emojisprite';
