feat: 링크 기능 추가, 일부 디자인 변경

--- a/webapp/channels/src/components/advanced_text_editor/advanced_text_editor.scss
+++ b/webapp/channels/src/components/advanced_text_editor/advanced_text_editor.scss
@@ -228,3 +228,28 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.advanced_text_editor_ils_link {
+    display: flex;
+    gap: 12px;
+    min-width: 100px;
+    justify-content: flex-end;
+    font-size: 12px;
+    align-items: center;
+
+    span {
+        color: #3098f8;
+        cursor: pointer;
+
+        &:hover {
+            opacity: .7;
+        }
+    }
+
+    > div {
+        min-width: 1px;
+        height: 10px;
+        background-color: #afafaf;
+        margin-top: 1px;
+    }
+}
